--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,7 @@
 $euiColorPrimary: #ab05f2;
 $euiColorAccent: #0cf2b1;
 
-@import '@elastic/eui/src/themes/amsterdam/theme_dark';
+@import "@elastic/eui/src/themes/amsterdam/theme_dark";
 
 .link {
   color: $euiColorAccent;
@@ -14,4 +14,5 @@ $euiColorAccent: #0cf2b1;
 .App {
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
